Fix tests due to restrictions introduced in newer Java versions